// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comile > bindings 1`] = `
"import { watchEffect } from 'vue';
import { template, children, insert, setText } from 'vue/vapor';
const t0 = template(\`<div>count is <!>.</div>\`);
export function render() {
  const root = t0();
  const {
    0: [
      n1,
      {
        1: [n3],
      },
    ],
  } = children(root);
  const n2 = document.createTextNode(count.value);
  insert(n2, n1, n3);
  watchEffect(() => {
    setText(n2, undefined, count.value);
  });
  return root;
}
"
`;

exports[`comile > directives > v-bind > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setAttr } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setAttr(n1, 'id', undefined, id.value);
  });
  return root;
}
"
`;

exports[`comile > directives > v-html > no expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setHtml } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setHtml(n1, undefined, '');
  });
  return root;
}
"
`;

exports[`comile > directives > v-html > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setHtml } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setHtml(n1, undefined, code.value);
  });
  return root;
}
"
`;

exports[`comile > directives > v-on > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, on } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    on(n1, 'click', handleClick);
  });
  return root;
}
"
`;

exports[`comile > directives > v-once > as root node 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setAttr } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setAttr(n1, 'id', undefined, foo);
  });
  return root;
}
"
`;

exports[`comile > directives > v-once > basic 1`] = `
"import { template, children, insert, setText, setAttr } from 'vue/vapor';
const t0 = template(\`<div> <span></span></div>\`);
export function render() {
  const root = t0();
  const {
    0: [
      n1,
      {
        1: [n3],
      },
    ],
  } = children(root);
  const n2 = document.createTextNode(msg.value);
  insert(n2, n1, 0 /* InsertPosition.FIRST */);
  setText(n2, undefined, msg.value);
  setAttr(n3, 'class', undefined, clz.value);
  return root;
}
"
`;

exports[`comile > directives > v-text > no expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setText } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setText(n1, undefined, '');
  });
  return root;
}
"
`;

exports[`comile > directives > v-text > simple expression 1`] = `
"import { watchEffect } from 'vue';
import { template, children, setText } from 'vue/vapor';
const t0 = template(\`<div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  watchEffect(() => {
    setText(n1, undefined, str.value);
  });
  return root;
}
"
`;

exports[`comile > fragment 1`] = `
"import { template, children } from 'vue/vapor';
const t0 = template(\`<p></p><span></span><div></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
    1: [n2],
    2: [n3],
  } = children(root);
  return root;
}
"
`;

exports[`comile > static template 1`] = `
"import { template, children } from 'vue/vapor';
const t0 = template(\`<div><p>hello</p><input><span></span></div>\`);
export function render() {
  const root = t0();
  const {
    0: [n1],
  } = children(root);
  return root;
}
"
`;
